--- a/banking.html
+++ b/banking.html
@@ -13,126 +13,120 @@
 
     <title>Banking</title>
   </head>
-  <body>
-    <section id="background">
-      <header>
-        <h1
-          class="
-            text-5xl text-center
-            m-16
-            border-2 border-white-700
-            bg-white
-            p-4
-            w-2/4
-            mx-auto
-            rounded-lg
-          "
-        >
-          Banking
-          <span class="text-yellow-500 font-semibold">Transanction</span>
-        </h1>
-      </header>
+  <body id="background">
+    <header>
+      <h1
+        class="
+          text-5xl text-center
+          m-16
+          border-2 border-white-700
+          bg-white
+          p-4
+          w-2/4
+          mx-auto
+          rounded-lg
+        "
+      >
+        Banking
+        <span class="text-yellow-500 font-semibold">Transanction</span>
+      </h1>
+    </header>
 
-      <main class="w-3/4 mx-auto">
-        <!-- Balance Section -->
-        <section>
-          <div class="grid grid-cols-3 gap-4 p-10">
-            <div class="bg-blue-500 rounded-lg p-4 text-white">
-              <h2 class="text-3xl">Deposit</h2>
-              <h3 class="text-3xl">$ <span id="deposit-total">000</span></h3>
-            </div>
-            <div class="bg-green-500 rounded-lg p-4 text-white">
-              <h2 class="text-3xl">Withdraw</h2>
-              <h3 class="text-3xl">$<span id="withdraw-total">000</span></h3>
-            </div>
-            <div class="bg-yellow-500 rounded-lg p-4 text-white">
-              <h2 class="text-3xl">Balance</h2>
-              <h3 class="text-3xl">$<span id="final-balance">5000</span></h3>
-            </div>
+    <main class="w-3/4 mx-auto">
+      <!-- Balance Section -->
+      <section>
+        <div class="grid grid-cols-3 gap-4 p-10">
+          <div class="bg-blue-500 rounded-lg p-4 text-white">
+            <h2 class="text-3xl">Deposit</h2>
+            <h3 class="text-3xl">$ <span id="deposit-total">000</span></h3>
           </div>
-        </section>
+          <div class="bg-green-500 rounded-lg p-4 text-white">
+            <h2 class="text-3xl">Withdraw</h2>
+            <h3 class="text-3xl">$<span id="withdraw-total">000</span></h3>
+          </div>
+          <div class="bg-yellow-500 rounded-lg p-4 text-white">
+            <h2 class="text-3xl">Balance</h2>
+            <h3 class="text-3xl">$<span id="final-balance">5000</span></h3>
+          </div>
+        </div>
+      </section>
 
-        <!-- Transaction Section -->
+      <!-- Transaction Section -->
 
-        <section>
-          <div>
-            <h1
+      <section>
+        <div>
+          <h1
+            class="
+              text-5xl text-center
+              m-16
+              border-2 border-white-700
+              bg-white
+              p-4
+              w-2/4
+              mx-auto
+              rounded-lg
+            "
+          >
+            Transaction
+            <span class="text-yellow-500 font-semibold">Section</span>
+          </h1>
+        </div>
+
+        <div class="grid grid-cols-2 gap-5">
+          <div class="bg-red-200 rounded-lg p-10">
+            <h3 class="text-3xl mb-5 font-semibold text-black-700 text-center">
+              Deposit Section
+            </h3>
+            <input
+              class="border-2 border-gray-400 mb-5 rounded-lg p-2 w-full"
+              type="text"
+              name=""
+              id="deposit-input"
+              placeholder="Enter deposit amount"
+            />
+            <button
               class="
-                text-5xl text-center
-                m-16
                 border-2 border-white-700
-                bg-white
-                p-4
-                w-2/4
-                mx-auto
+                bg-yellow-400
+                block
+                mb-5
                 rounded-lg
+                p-2
               "
+              id="deposit-btn"
             >
-              Transaction
-              <span class="text-yellow-500 font-semibold">Section</span>
-            </h1>
+              Submit
+            </button>
           </div>
-
-          <div class="grid grid-cols-2 gap-5">
-            <div class="bg-red-200 rounded-lg p-10">
-              <h3
-                class="text-3xl mb-5 font-semibold text-black-700 text-center"
-              >
-                Deposit Section
-              </h3>
-              <input
-                class="border-2 border-gray-400 mb-5 rounded-lg p-2 w-full"
-                type="text"
-                name=""
-                id="deposit-input"
-                placeholder="Enter deposit amount"
-              />
-              <button
-                class="
-                  border-2 border-white-700
-                  bg-yellow-400
-                  block
-                  mb-5
-                  rounded-lg
-                  p-2
-                "
-                id="deposit-btn"
-              >
-                Submit
-              </button>
-            </div>
-            <div class="bg-indigo-200 rounded-lg p-10">
-              <h3
-                class="text-3xl mb-5 font-semibold text-green-900 text-center"
-              >
-                Withdraw Section
-              </h3>
-              <input
-                class="border-2 border-gray-400 mb-5 rounded-lg p-2 w-full"
-                type="text"
-                name=""
-                id="withdraw-input"
-                placeholder="Enter withdraw amount"
-              />
-              <button
-                class="
-                  border-2 border-black-400
-                  bg-red-500
-                  block
-                  mb-5
-                  rounded-lg
-                  p-2
-                  text-white
-                "
-                id="withdraw-btn"
-              >
-                Submit
-              </button>
-            </div>
+          <div class="bg-indigo-200 rounded-lg p-10">
+            <h3 class="text-3xl mb-5 font-semibold text-green-900 text-center">
+              Withdraw Section
+            </h3>
+            <input
+              class="border-2 border-gray-400 mb-5 rounded-lg p-2 w-full"
+              type="text"
+              name=""
+              id="withdraw-input"
+              placeholder="Enter withdraw amount"
+            />
+            <button
+              class="
+                border-2 border-black-400
+                bg-red-500
+                block
+                mb-5
+                rounded-lg
+                p-2
+                text-white
+              "
+              id="withdraw-btn"
+            >
+              Submit
+            </button>
           </div>
-        </section>
-      </main>
-    </section>
+        </div>
+      </section>
+    </main>
 
     <script src="/banktransaction.js"></script>
   </body>
